# get_set

./: CMakeLists.txt  LICENSE  README.md
interface/: get_set.hpp  getable_getter.hpp  setable_setter.hpp
