cmake_minimum_required(VERSION 3.27)
project(get_set CXX)
add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE interface)
add_library(get_set_precompiled INTERFACE)
target_include_directories(get_set_precompiled INTERFACE interface)
target_precompile_headers(get_set_precompiled INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/interface/get_set.hpp)
